--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,9 +8,9 @@
     </string-array>
 
     <string-array name="modes">
-        <item>SENSOR_DELAY_UI</item>
-        <item>SENSOR_DELAY_NORMAL</item>
-        <item>SENSOR_DELAY_GAME</item>
-        <item>SENSOR_DELAY_FASTEST</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
     </string-array>
 </resources>
